# agentnotary

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  action.yml  cli.py  manifest.py  pyproject.toml  recorder.py  tester.py  versioner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agentnotary-self-check.yml  ci.yml
agentbox/: __init__.py  cli.py  manifest.py  pricing.py  recorder.py  scanner.py  tester.py  versioner.py
agentbox/compliance/: __init__.py  classifier.py  generator.py
agentbox/compliance/renderers/: json_renderer.py  markdown.py
agentbox/compliance/standards/: eu_ai_act.py
agentbox/guard/: __init__.py  interceptor.py  pii.py  policies.py  proxy.py  runner.py
agentbox/seal/: __init__.py  fingerprint.py  lockfile.py
agentnotary/: __init__.py  cli.py  manifest.py  pricing.py  recorder.py  scanner.py  tester.py  versioner.py
agentnotary/attack/: __init__.py  corpus.py  runner.py
agentnotary/audit/: __init__.py  auditor.py
agentnotary/bench/: __init__.py  runner.py
agentnotary/bom/: __init__.py  generator.py
agentnotary/compliance/: __init__.py  classifier.py  generator.py
agentnotary/compliance/renderers/: json_renderer.py  markdown.py
agentnotary/compliance/standards/: eu_ai_act.py
agentnotary/drift/: __init__.py  detector.py
agentnotary/guard/: __init__.py  interceptor.py  pii.py  policies.py  proxy.py  runner.py
agentnotary/rewind/: __init__.py  runner.py
agentnotary/score/: __init__.py  scorer.py
agentnotary/seal/: __init__.py  compare.py  fingerprint.py  lockfile.py
docs/: index.html
scripts/: README.md  demo.sh  make_demo_gif.py  runaway_agent.py
tests/: test_attack.py  test_audit.py  test_bench.py  test_bom.py  test_cli.py  test_compare.py  test_compliance.py  test_drift.py  test_guard_policies.py  test_manifest.py  test_manifest_v02.py  test_recorder.py  test_rewind.py  test_scanner.py  test_score.py  test_seal.py  test_versioner.py
tests/fixtures/: agentbox_v02.yaml  agentnotary_v02.yaml
vhs/: agentnotary.tape
