[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbox"
version = "0.1.0"
description = "Docker for AI Agents — package, test, version, and govern AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "llm", "devops", "governance", "langchain", "crewai", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agentbox = "agentbox.cli:main"

[project.urls]
Homepage = "https://github.com/CharanBharathula/agentbox"
Documentation = "https://CharanBharathula.github.io/agentbox"
Repository = "https://github.com/CharanBharathula/agentbox"
"Bug Tracker" = "https://github.com/CharanBharathula/agentbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["agentbox"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
