[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbox"
version = "0.2.0"
description = "The declarative governance spec for AI agents — seal, guard, and audit-ready compliance"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["ai", "agents", "llm", "governance", "compliance", "eu-ai-act", "reproducibility", "lockfile", "guardrails", "langchain", "crewai", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
pii = ["presidio-analyzer>=2.2"]
pdf = ["weasyprint>=60"]
all = ["anthropic>=0.40", "openai>=1.0", "presidio-analyzer>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
]

[project.scripts]
agentbox = "agentbox.cli:main"

[project.urls]
Homepage = "https://github.com/CharanBharathula/agentbox"
Documentation = "https://CharanBharathula.github.io/agentbox"
Repository = "https://github.com/CharanBharathula/agentbox"
"Bug Tracker" = "https://github.com/CharanBharathula/agentbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["agentbox"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
