[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnotary"
version = "0.3.0"
description = "Notarize, govern, and audit AI agents — cryptographic seal, runtime guard, and EU AI Act compliance docs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = [
    "ai", "agents", "llm",
    "governance", "compliance", "eu-ai-act",
    "reproducibility", "lockfile", "sbom", "cyclonedx", "spdx",
    "guardrails", "ai-safety", "prompt-injection",
    "langchain", "crewai", "autogen", "anthropic", "openai", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
pii = ["presidio-analyzer>=2.2"]
pdf = ["weasyprint>=60"]
all = ["anthropic>=0.40", "openai>=1.0", "presidio-analyzer>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
]

[project.scripts]
agentnotary = "agentnotary.cli:main"

[project.urls]
Homepage = "https://github.com/CharanBharathula/agentnotary"
Documentation = "https://CharanBharathula.github.io/agentnotary"
Repository = "https://github.com/CharanBharathula/agentnotary"
"Bug Tracker" = "https://github.com/CharanBharathula/agentnotary/issues"
Changelog = "https://github.com/CharanBharathula/agentnotary/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentnotary*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.run]
source = ["agentnotary"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60
